--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9001
-azureBlobService=http://localhost:8081/blob/readBlobItem
+azureBlobService=http://20.81.76.203:9006/blob/readBlobItem
 contactService=http://localhost:9002/contact/user/
 containerName=pdecontainer
 userFile=User.csv
 topicName=/UserDetails
-azureSBusService=http://localhost:9003/serviceBus/Topic
+azureSBusService=http://20.83.137.84:9003/serviceBus/Topic
 batchSize=5
