--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9001
-azureBlobService=http://10.0.158.149/blob/readBlobItem
+azureBlobService=http://localhost:9006/blob/readBlobItem
 contactService=http://localhost:9002/contact/user/
 containerName=pdecontainer
 userFile=User.csv
 topicName=/UserDetails
-azureSBusService=http://10.0.40.20/serviceBus/Topic
+azureSBusService=http://localhost:9003/serviceBus/Topic
 batchSize=5
